@@ -36,15 +36,17 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.jdk.version>19</project.jdk.version>
+		<project.jdk.version>20</project.jdk.version>
 
 		<!-- runtime dependencies -->
 
-		<api.version>1.2.0</api.version>
+		<api.version>1.3.0-beta1</api.version>
 		<secret-service.version>1.8.1-jdk17</secret-service.version>
-		<kdewallet.version>1.2.8</kdewallet.version>
+		<kdewallet.version>1.3.0</kdewallet.version>
+		<appindicator.version>1.3.0</appindicator.version>
 		<guava.version>31.1-jre</guava.version>
 		<slf4j.version>1.7.36</slf4j.version>
+		<commons-lang3.version>3.12.0</commons-lang3.version>
 
 		<!-- test dependencies -->
 		<junit.version>5.8.2</junit.version>
@@ -80,6 +82,19 @@
 			<artifactId>kdewallet</artifactId>
 			<version>${kdewallet.version}</version>
 		</dependency>
+		<!-- Apache Commons -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
+		</dependency>
+		<!-- Java bindings for appindicator -->
+		<dependency>
+			<groupId>org.purejava</groupId>
+			<artifactId>appindicator-gtk3-java</artifactId>
+			<classifier>libayatana-appindicator-libappindicator-minimal</classifier>
+			<version>${appindicator.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
@@ -96,6 +111,9 @@
 				<version>3.9.0</version>
 				<configuration>
 					<release>${project.jdk.version}</release>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -190,6 +208,7 @@
 							<name>see</name>
 						</tag>
 					</tags>
+					<additionalOptions>--enable-preview</additionalOptions>
 				</configuration>
 			</plugin>
 		</plugins>
